# backend/routes/emprunts.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const { fetchEmprunts } = require('../controllers/empruntController');
+
+router.get('/', fetchEmprunts);
+
+module.exports = router;
